「检查钱包信息」修改：余额-》账户余额；我的账户地址-〉账户地址；英文为Address

--- a/app/src/main/res/layout-land/tv_include_account_info.xml
+++ b/app/src/main/res/layout-land/tv_include_account_info.xml
@@ -20,7 +20,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/d5"
             android:gravity="center_vertical"
-            android:text="@string/account_balance"
+            android:text="@string/account_balance_tv"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_14" />
 
