--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -46,7 +46,7 @@
             style="@style/white_14_text_style"
             android:layout_below="@+id/tv_account_address_value"
             android:layout_marginTop="@dimen/d16"
-            android:text="@string/account_balance" />
+            android:text="@string/balance" />
 
         <io.bcaas.view.BcaasBalanceTextView
             android:id="@+id/bbt_balance"
