--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -121,6 +121,10 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_14</item>
     </style>
+    <style name="white_12_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_12</item>
+    </style>
 
 
     <style name="black_16_text_style" parent="marquee_style">
@@ -156,6 +160,12 @@
         <item name="android:textColor">@color/black_1d2124</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/text_size_18</item>
+    </style>
+
+    <style name="white_bold_16_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
     </style>
 
     <style name="black30_12_text_style" parent="marquee_style">
