--- a/app/src/main/res/layout/include_edit_text_password.xml
+++ b/app/src/main/res/layout/include_edit_text_password.xml
@@ -18,14 +18,15 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:background="@color/transparent"
+            android:clickable="true"
             android:digits="@string/password_rule"
             android:drawablePadding="@dimen/d10"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:hint="@string/enter_password"
             android:inputType="textPassword"
             android:maxLength="16"
-            android:clickable="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
+            android:minHeight="@dimen/d24"
             android:paddingRight="@dimen/d40"
             android:singleLine="true" />
 
