--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -115,7 +115,7 @@
 
                             <TextView
                                 android:id="@+id/tv_currency"
-                                style="@style/black_14_text_style"
+                                style="@style/black_12_text_style"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_toLeftOf="@+id/btn_select_currency"
@@ -236,7 +236,8 @@
                         android:hint="@string/please_enter_transaction_amount"
                         android:inputType="numberDecimal"
                         android:textColor="@color/orange_yellow"
-                        android:textSize="@dimen/text_size_18" />
+                        android:textSize="@dimen/text_size_18"
+                        android:textStyle="bold" />
                 </RelativeLayout>
             </RelativeLayout>
 
