交易金额hint不加粗

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -17,9 +17,9 @@
     <TextView
         android:id="@+id/tv_block_service"
         style="@style/black70_14_single_text_style"
-        android:gravity="center_vertical|right"
-        android:maxWidth="@dimen/d60"
-        android:text="BCC" />
+        android:layout_width="@dimen/d60"
+        android:gravity="center_vertical|left"
+        android:text="@string/receive" />
 
     <TextView
         android:id="@+id/tv_account_address"
