--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -224,6 +224,15 @@
                         android:layout_marginTop="@dimen/d16"
                         android:text="@string/transaction_amount" />
 
+                    <TextView
+                        android:id="@+id/tv_amount_hint"
+                        style="@style/black30_14_text_style"
+                        android:layout_below="@+id/tv_transaction_amount_key"
+                        android:layout_marginBottom="@dimen/d20"
+                        android:layout_marginTop="@dimen/d16"
+                        android:gravity="bottom"
+                        android:text="@string/please_enter_transaction_amount" />
+
                     <EditText
                         android:id="@+id/et_transaction_amount"
                         style="@style/orange_yellow_18_single_edit_text_style"
@@ -232,8 +241,8 @@
                         android:layout_below="@+id/tv_transaction_amount_key"
                         android:layout_marginBottom="@dimen/d20"
                         android:layout_marginTop="@dimen/d16"
+                        android:background="@color/transparent"
                         android:digits="@string/amount_edit_digits"
-                        android:hint="@string/please_enter_transaction_amount"
                         android:inputType="numberDecimal"
                         android:textColor="@color/orange_yellow"
                         android:textSize="@dimen/text_size_18"
