--- a/app/src/main/res/layout-land/tv_include_edit_text_password.xml
+++ b/app/src/main/res/layout-land/tv_include_edit_text_password.xml
@@ -18,6 +18,9 @@
             android:background="@color/transparent"
             android:digits="@string/password_rule"
             android:drawablePadding="@dimen/d10"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
             android:hint="@string/enter_password"
             android:inputType="textPassword"
             android:maxLength="16"
@@ -27,6 +30,9 @@
             android:id="@+id/cb_pwd"
             android:layout_width="@dimen/d15"
             android:layout_height="@dimen/d15"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@color/transparent"
