發送確認頁面帳戶地址 update 收款帳戶地址

--- a/app/src/main/res/layout/activity_send_toconfirm_pwd.xml
+++ b/app/src/main/res/layout/activity_send_toconfirm_pwd.xml
@@ -54,7 +54,7 @@
                 android:layout_marginTop="@dimen/d18"
                 android:paddingLeft="@dimen/d12"
                 android:paddingRight="@dimen/d12"
-                android:text="@string/receive_account" />
+                android:text="@string/receiving_account" />
 
             <TextView
                 android:id="@+id/tv_destination_wallet"
