TV版添加被踢登出邏輯/phone優化登出框邏輯

--- a/app/src/main/res/layout-land/tv_layout_bcaas_single_dialog.xml
+++ b/app/src/main/res/layout-land/tv_layout_bcaas_single_dialog.xml
@@ -15,6 +15,7 @@
     <RelativeLayout
         android:layout_width="@dimen/d299"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:gravity="center">
 
         <TextView
