--- a/app/src/main/res/layout-land/tv_layout_bcaas_single_dialog.xml
+++ b/app/src/main/res/layout-land/tv_layout_bcaas_single_dialog.xml
@@ -3,7 +3,8 @@
     android:id="@+id/block_base_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    android:background="@drawable/bg_white">
 
     <io.bcaas.view.tv.FlyBroadLayout
         android:id="@+id/block_base_mainup"
@@ -15,8 +16,9 @@
     <RelativeLayout
         android:layout_width="@dimen/d299"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center">
+        android:layout_marginLeft="@dimen/d20"
+        android:layout_marginRight="@dimen/d20"
+        android:layout_marginTop="@dimen/d20">
 
         <TextView
             android:id="@+id/tv_title"
@@ -49,15 +51,15 @@
         <Button
             android:id="@+id/btn_sure"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/d48"
+            android:layout_height="@dimen/d40"
             android:layout_below="@+id/line"
+            android:layout_marginBottom="@dimen/d20"
             android:background="@color/transparent"
-            android:clickable="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:text="@string/confirm"
             android:textAllCaps="false"
             android:textColor="@color/black50_1d2124"
             android:textSize="@dimen/text_size_16" />
+
+
     </RelativeLayout>
 </io.bcaas.view.tv.MainUpLayout>
