--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -233,7 +233,7 @@
 
                     <EditText
                         android:id="@+id/et_transaction_amount"
-                        style="@style/orange_yellow_18_single_edit_text_style"
+                        style="@style/orange_yellow_18_bold_single_edit_text_style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_transaction_amount_key"
@@ -241,10 +241,7 @@
                         android:layout_marginTop="@dimen/d16"
                         android:background="@color/transparent"
                         android:digits="@string/amount_edit_digits"
-                        android:inputType="numberDecimal"
-                        android:textColor="@color/orange_yellow"
-                        android:textSize="@dimen/text_size_18"
-                        android:textStyle="bold" />
+                        android:inputType="numberDecimal" />
                 </RelativeLayout>
             </RelativeLayout>
 
