--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -220,9 +220,10 @@
         <item name="android:textSize">@dimen/text_size_10</item>
     </style>
 
-    <style name="orange_yellow_18_single_edit_text_style" parent="marquee_style">
+    <style name="orange_yellow_18_bold_single_edit_text_style" parent="marquee_style">
         <item name="android:layout_height">@dimen/d32</item>
         <item name="android:cursorVisible">true</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textCursorDrawable">@drawable/edit_text_cursor_drawable</item>
         <item name="android:layout_marginTop">@dimen/d16</item>
         <item name="android:textSize">@dimen/text_size_18</item>
