檢查佈局命名規範

--- a/app/src/main/res/layout/layout_loading_dailog.xml
+++ b/app/src/main/res/layout/layout_loading_dailog.xml
@@ -12,7 +12,7 @@
         android:indeterminateTint="@color/button_right_color" />
 
     <TextView
-        android:id="@+id/tipTextView"
+        android:id="@+id/tip_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/d10"
