--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -53,61 +53,29 @@
                         android:ellipsize="middle"
                         android:gravity="center|right" />
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_account_address_value"
-                        android:layout_marginTop="@dimen/d24"
-                        android:orientation="horizontal">
+                        android:layout_marginTop="@dimen/d24">
 
-                        <LinearLayout
-                            android:id="@+id/ll_balance"
-                            android:layout_width="@dimen/d0"
-                            android:layout_height="wrap_content"
+
+                        <TextView
+                            android:id="@+id/tv_balance_key"
+                            style="@style/black50_12_text_style"
+                            android:layout_width="match_parent"
                             android:layout_marginRight="@dimen/d10"
-                            android:layout_weight="1"
-                            android:gravity="left|center_vertical"
-                            android:orientation="vertical">
+                            android:layout_toLeftOf="@+id/rl_currency"
+                            android:gravity="left"
+                            android:text="@string/balance"
+                            android:textSize="@dimen/text_size_12" />
 
-                            <TextView
-                                android:id="@+id/tv_balance_key"
-                                style="@style/black50_12_text_style"
-                                android:layout_width="wrap_content"
-                                android:gravity="left"
-                                android:text="@string/balance"
-                                android:textSize="@dimen/text_size_12" />
-
-                            <RelativeLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="left"
-                                android:layout_marginTop="@dimen/d10"
-                                android:gravity="left">
-
-                                <io.bcaas.view.BcaasBalanceTextView
-                                    android:id="@+id/bbt_balance"
-                                    style="@style/black_14_single_text_style"
-                                    android:layout_width="wrap_content"
-                                    android:ellipsize="end"
-                                    android:gravity="left"
-                                    tools:text="0.000000" />
-
-                                <ProgressBar
-                                    android:id="@+id/pb_balance"
-                                    android:layout_width="@dimen/d15"
-                                    android:layout_height="@dimen/d15"
-                                    android:layout_marginLeft="@dimen/d5"
-                                    android:layout_marginRight="@dimen/d5"
-                                    android:gravity="left"
-                                    android:indeterminateTint="@color/bcaas_color"
-                                    android:visibility="gone" />
-                            </RelativeLayout>
-                        </LinearLayout>
 
                         <RelativeLayout
                             android:id="@+id/rl_currency"
                             android:layout_width="@dimen/d80"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
                             android:layout_gravity="top"
                             android:gravity="top|right"
                             android:orientation="vertical">
@@ -128,7 +96,35 @@
                                 android:layout_marginLeft="@dimen/d10"
                                 android:background="@mipmap/icon_select_red" />
                         </RelativeLayout>
-                    </LinearLayout>
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/tv_balance_key"
+                            android:layout_gravity="left"
+                            android:layout_marginTop="@dimen/d10"
+                            android:gravity="left">
+
+                            <io.bcaas.view.BcaasBalanceTextView
+                                android:id="@+id/bbt_balance"
+                                style="@style/black_14_single_text_style"
+                                android:layout_width="wrap_content"
+                                android:ellipsize="end"
+                                android:gravity="left"
+                                tools:text="0.000000" />
+
+                            <ProgressBar
+                                android:id="@+id/pb_balance"
+                                android:layout_width="@dimen/d15"
+                                android:layout_height="@dimen/d15"
+                                android:layout_marginLeft="@dimen/d5"
+                                android:layout_marginRight="@dimen/d5"
+                                android:gravity="left"
+                                android:indeterminateTint="@color/bcaas_color"
+                                android:visibility="gone" />
+                        </RelativeLayout>
+
+                    </RelativeLayout>
                 </RelativeLayout>
 
             </LinearLayout>
