修改獲取Android新版本的邏輯，手機版只有在from==login的時候、TV版只有當from==brand的時候，才會重新請求Android最新版本的信息

--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -132,20 +132,14 @@
                             <ScrollView
                                 android:id="@+id/sv_account_transaction_record"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/d10">
+                                android:layout_height="0dp"
+                                android:layout_marginBottom="@dimen/d10"
+                                android:layout_weight="1">
 
                                 <android.support.v7.widget.RecyclerView
                                     android:id="@+id/rv_account_transaction_record"
                                     android:layout_width="match_parent"
-                                    android:layout_height="@dimen/d0"
-                                    android:layout_weight="1"
-                                    android:clickable="false"
-                                    android:focusable="false"
-                                    android:focusableInTouchMode="false"
-                                    android:nextFocusDown="@+id/tv_loading_more"
-                                    android:nextFocusLeft="@+id/tv_currency"
-                                    android:nextFocusUp="@+id/tv_logout"
+                                    android:layout_height="wrap_content"
                                     android:scrollbars="none"
                                     tools:listitem="@layout/tv_item_transaction" />
                             </ScrollView>
