「交易记录」添加右边距

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -19,6 +19,7 @@
         style="@style/black70_14_single_text_style"
         android:layout_width="@dimen/d55"
         android:layout_marginLeft="@dimen/d5"
+        android:layout_marginRight="@dimen/d5"
         android:gravity="center_vertical|left"
         android:text="@string/receive" />
 
