--- a/app/src/main/res/layout-land/tv_item_transaction.xml
+++ b/app/src/main/res/layout-land/tv_item_transaction.xml
@@ -12,12 +12,11 @@
     <io.bcaas.view.TVLinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/tv_layout_selector"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/d2"
-        android:paddingRight="@dimen/d2">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_time"
