--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,11 +68,12 @@
         <TextView
             android:id="@+id/tv_version"
             style="@style/black30_10_text_style"
+            android:layout_height="@dimen/d30"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center_horizontal|bottom"
             android:layout_marginBottom="@dimen/d30"
-            android:gravity="center_horizontal" />
+            android:gravity="center_horizontal|bottom" />
 
     </RelativeLayout>
 
