--- a/app/src/main/res/layout-land/tv_include_header.xml
+++ b/app/src/main/res/layout-land/tv_include_header.xml
@@ -42,5 +42,16 @@
         android:scaleType="fitCenter"
         android:src="@mipmap/tv_icon_language_switch" />
 
-
+    <TextView
+        android:id="@+id/tv_toast"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/d20"
+        android:layout_toLeftOf="@+id/tv_title"
+        android:background="@color/orange_FC9003"
+        android:padding="@dimen/d5"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_18"
+        android:textStyle="bold"
+        android:visibility="visible" />
 </RelativeLayout>
