--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,14 +24,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/d20"
-        android:layout_marginRight="@dimen/d20"
-        android:layout_marginTop="@dimen/d76" />
+        android:layout_marginTop="@dimen/d76"
+        android:layout_marginRight="@dimen/d20" />
 
     <View
         style="@style/line_style"
         android:layout_marginLeft="@dimen/d12"
-        android:layout_marginRight="@dimen/d12"
-        android:layout_marginTop="@dimen/d16" />
+        android:layout_marginTop="@dimen/d16"
+        android:layout_marginRight="@dimen/d12" />
 
     <Button
         android:id="@+id/btn_unlock_wallet"
@@ -43,8 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0"
         android:layout_marginLeft="@dimen/d12"
-        android:layout_marginRight="@dimen/d12"
         android:layout_marginTop="@dimen/d20"
+        android:layout_marginRight="@dimen/d12"
         android:layout_weight="1.3">
 
         <TextView
