--- a/app/src/main/res/layout/activity_brand.xml
+++ b/app/src/main/res/layout/activity_brand.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/icon_brand_logo" />
+                android:src="@mipmap/icon_bcaas_white" />
         </LinearLayout>
 
         <ImageView
