--- a/app/src/main/res/layout/help_view_login_create.xml
+++ b/app/src/main/res/layout/help_view_login_create.xml
@@ -20,9 +20,9 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/d20"
         android:gravity="center"
-        android:text="还未创建BCAAS钱包？可点击生成一个新钱包"
+        android:text="@string/touch_can_create_new_wallet"
         android:textColor="@color/white"
-        android:textSize="@dimen/text_size_12" />
+        android:textSize="@dimen/text_size_15" />
 
     <Button
         android:id="@+id/btn_next"
@@ -33,5 +33,5 @@
         android:background="@drawable/bg_white_stroke"
         android:text="@string/next"
         android:textColor="@color/white"
-        android:textSize="@dimen/text_size_12" />
+        android:textSize="@dimen/text_size_15" />
 </LinearLayout>
