--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/d16"
     android:gravity="center_vertical"
+    android:id="@+id/ll_item_transaction"
     android:orientation="horizontal">
 
     <io.bcaas.view.textview.BcaasBalanceTextView
@@ -19,13 +20,12 @@
         style="@style/black70_14_single_text_style"
         android:layout_width="@dimen/d55"
         android:layout_marginLeft="@dimen/d5"
-        android:layout_marginRight="@dimen/d5"
         android:gravity="center_vertical|left"
         android:text="@string/receive" />
 
     <TextView
         android:id="@+id/tv_account_address"
-        style="@style/black70_14_single_text_style"
+        style="@style/black70_13_single_text_style"
         android:layout_width="@dimen/d0"
         android:layout_weight="1"
         android:ellipsize="middle"
