--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -99,7 +99,13 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_28</item>
     </style>
-
+    <style name="black_bold_28_text_style" >
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_28</item>
+    </style>
 
     <style name="white_14_text_style" parent="marquee_style">
         <item name="android:textColor">@color/white</item>
@@ -162,7 +168,10 @@
         <item name="android:textColor">@color/black70_1d2124</item>
         <item name="android:textSize">@dimen/text_size_14</item>
     </style>
-
+    <style name="black70_13_single_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/black70_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_13</item>
+    </style>
     <style name="black70_16_single_text_style" parent="marquee_style">
         <item name="android:textColor">@color/black70_1d2124</item>
         <item name="android:textSize">@dimen/text_size_16</item>
